<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_settings">Settings</string>
    <string name="title_details_activity">Details</string>
    <string name="popular_name_pref">Popular</string>
    <string name="top_rated_name_pref">Top Rated</string>
    <string name="order_title_pref">Sort Order</string>

    <string name="header_title">Title</string>
    <string name="header_vote_average">User rating</string>
    <string name="header_release_date">Release date</string>
    <string name="header_overview">Plot synopsis</string>
    <string name="toast_no_connection">Still no Internet connection. Please try again.</string>
    <string name="retry_button">RETRY</string>
    <string name="overview_not_available">Not available</string>
    <string name="no_connection">No Internet connection</string>
    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <string name="pref_popular_value" translatable="false">popular_value</string>
    <string name="pref_top_rated_value" translatable="false">top_rated_value</string>
    <string name="no_connection_hint">No Internet Connection found.\nCheck your connection or try again.</string>
    <string name="movie_poster_content_description">Movie Poster</string>

</resources>
