<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alessandro.popularMovies1.FragmentDetails">

    <RelativeLayout
        style="@style/details_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            style="@style/image_details_fragment"
            android:contentDescription="@string/movie_poster_content_description" />

        <LinearLayout
            android:id="@+id/movie_info"
            style="@style/details_linear_layout">

            <TextView
                android:id="@+id/title_header"
                style="@style/details_fragment_title_header"
                android:text="@string/header_title" />

            <TextView
                android:id="@+id/title_content"
                style="@style/details_fragment_title_content" />

            <TextView
                android:id="@+id/release_date_header"
                style="@style/details_fragment_release_date_header"
                android:text="@string/header_release_date" />

            <TextView
                android:id="@+id/release_date_content"
                style="@style/details_fragment_release_date_content" />

            <TextView
                android:id="@+id/vote_average_header"
                style="@style/details_fragment_vote_average_header"
                android:text="@string/header_vote_average" />

            <TextView
                android:id="@+id/vote_average_content"
                style="@style/details_fragment_vote_average_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/overview_header"
            style="@style/details_fragment_overview_header"
            android:text="@string/header_overview" />

        <TextView
            android:id="@+id/overview_content"
            style="@style/details_fragment_overview_content" />
    </RelativeLayout>
</ScrollView>
